--- a/JWDateSettingDemo/Podfile
+++ b/JWDateSettingDemo/Podfile
@@ -1,8 +1,11 @@
 # Uncomment this line to define a global platform for your project
 platform :ios, '8.0'
 # Uncomment this line if you're using Swift
-use_frameworks!
+#use_frameworks!
 
-pod 'JWDateSetting',:git => 'https://github.com/upworldcjw/JWDateSetting.git'
+target 'JWDateSettingDemo' do
+#pod 'JWDateSetting',:git => 'https://github.com/upworldcjw/JWDateSetting.git'
 
+pod 'JWDateSetting',:path => '..'
 
+end
